# telegram-bot-on-replit

./: .gitignore  .replit  LICENSE.md  README.md  main.py  pyproject.toml
i18ndict/: en.py
templates/: index.html
