[tool.poetry]
name = "telegram-bot-on-replit"
version = "0.1.0"
description = ""
authors = ["Tigco <4tjmir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^13.1"
flask = "^1.1.2"
waitress = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
